gh-action: Add helm chart releaser workflow
Signed-off-by: Suraj Deshmukh <surajd.service@gmail.com>

--- a/olah/templates/deployment.yaml
+++ b/olah/templates/deployment.yaml
@@ -39,6 +39,7 @@ spec:
       {{- if .Values.enableHostPath}}
       - name: olah-repos
         hostPath:
+          # TODO: Parameterize this path
           path: /mnt/olah-repos
           type: DirectoryOrCreate
       {{- end }}
