storage: Allow users to provide the path

--- a/olah/templates/deployment.yaml
+++ b/olah/templates/deployment.yaml
@@ -36,10 +36,9 @@ spec:
       - name: config-volume
         configMap:
           name: olah-config
-      {{- if .Values.enableHostPath}}
+      {{- if .Values.storage.hostPath.enabled }}
       - name: olah-repos
         hostPath:
-          # TODO: Parameterize this path
-          path: /mnt/olah-repos
+          path: {{ .Values.storage.hostPath.path }}
           type: DirectoryOrCreate
       {{- end }}
